--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "an app that lets users notify others when there is food growing in public space, as well as share knowledge about which plants are edible and when/how to eat them.",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build ./src/index.html",
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel ./src/index.html"
   },
   "repository": {
     "type": "git",
@@ -23,10 +25,23 @@
     "express": "^4.17.1",
     "google-map-react": "^1.1.4",
     "node-fetch": "^2.6.0",
-    "parcel-bundler": "^1.12.3",
     "path": "^0.12.7",
     "pg": "^7.12.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "parcel-bundler": "^1.12.3"
+  },
+  "babel": {
+    "plugins": [
+      "@babel/plugin-proposal-class-properties",
+      "@babel/transform-runtime"
+    ]
   }
 }
